tests/snapshots/run_wpt_conformance__litert_maxPool2d_float16_4D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
maxPool2d.https.any.js maxPool2d float16 4D tensor default options, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    maxPool2dInput: f16[1, 2, 5, 5];
  }

  nodes {
    [maxPool2dOutput] = maxPool2d(maxPool2dInput, dilations=[], label="", layout="", outputShapeRounding="", outputSizes=null, padding=[], strides=[], windowDimensions=null);
  }

  outputs { maxPool2dOutput; }
}
