tests/snapshots/run_wpt_conformance__litert_maxPool2d_float16_4D_tensor_options_dilations_with_options_strides.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
maxPool2d.https.any.js maxPool2d float16 4D tensor options.dilations with options.strides, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    maxPool2dInput: f16[1, 7, 7, 2];
  }

  nodes {
    [maxPool2dOutput] = maxPool2d(maxPool2dInput, dilations=[1, 1], label="", layout="nhwc", outputShapeRounding="", outputSizes=null, padding=[1, 0, 0, 1], strides=[2, 2], windowDimensions=[3, 3]);
  }

  outputs { maxPool2dOutput; }
}
